class ApplicationLayer:
  """
  The ApplicationLayer class represents the application layer of the OSI model.
  It is responsible for the sending and receiving of data.
  """
  def __init__(self):
      """
      The constructor for the ApplicationLayer class.
      """
      pass

  def send(self, data):
      """
      The send method is responsible for sending data to the other system.
      """
      pass

  def receive(self):
      """
      The receive method is responsible for receiving data from the other system.
      """
      pass