class DataLinkLayer:
  """
  The DataLinkLayer class represents the data link layer of the OSI model.
  It is responsible for the framing and unframing of data.
  """
  def __init__(self):
      """
      The constructor for the DataLinkLayer class.
      """
      pass

  def frame(self, data):
      """
      The frame method is responsible for framing data into blocks or frames.
      """
      pass

  def unframe(self, frame):
      """
      The unframe method is responsible for unframing blocks or frames into data.
      """
      pass