class NetworkLayer:
  """
  The NetworkLayer class represents the network layer of the OSI model.
  It is responsible for the routing and forwarding of data packets.
  """
  def __init__(self):
      """
      The constructor for the NetworkLayer class.
      """
      pass

  def route(self, data):
      """
      The route method is responsible for determining the route for data packets.
      """
      pass

  def forward(self, data):
      """
      The forward method is responsible for forwarding data packets along the determined route.
      """
      pass