class PhysicalLayer:
  """
  The PhysicalLayer class represents the physical layer of the OSI model.
  It is responsible for the transmission and reception of raw bitstreams over a physical medium.
  """
  def __init__(self):
      """
      The constructor for the PhysicalLayer class.
      """
      pass

  def transmit(self, data):
      """
      The transmit method is responsible for transmitting raw bitstreams over a physical medium.
      """
      pass

  def receive(self):
      """
      The receive method is responsible for receiving raw bitstreams over a physical medium.
      """
      pass