class PresentationLayer:
  """
  The PresentationLayer class represents the presentation layer of the OSI model.
  It is responsible for the encoding and decoding of data.
  """
  def __init__(self):
      """
      The constructor for the PresentationLayer class.
      """
      pass

  def encode(self, data):
      """
      The encode method is responsible for encoding data into a form that can be transmitted over the network.
      """
      pass

  def decode(self, data):
      """
      The decode method is responsible for decoding data back into its original form.
      """
      pass