class SessionLayer:
  """
  The SessionLayer class represents the session layer of the OSI model.
  It is responsible for the establishment and termination of sessions.
  """
  def __init__(self):
      """
      The constructor for the SessionLayer class.
      """
      pass

  def establish(self):
      """
      The establish method is responsible for establishing a session.
      """
      pass

  def terminate(self):
      """
      The terminate method is responsible for terminating a session.
      """
      pass