class TransportLayer:
  """
  The TransportLayer class represents the transport layer of the OSI model.
  It is responsible for the segmentation and reassembly of data.
  """
  def __init__(self):
      """
      The constructor for the TransportLayer class.
      """
      pass

  def segment(self, data):
      """
      The segment method is responsible for segmenting data into smaller pieces.
      """
      pass

  def reassemble(self, data):
      """
      The reassemble method is responsible for reassembling segmented data back into its original form.
      """
      pass